kubernetes_project/k8s_ingress/externel-srv.yml
- apiVersion: v1
- kind: Service
- metadata:
  name: myapp-externel-sevice
- spec:
  - selector:
    app: myapp
  - type: LoadBalancer
    - ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
        # port number the user access for the application
        nodePort: 35010
