kubernetes_project/k8s_ingress/internal-srv.yml
- apiVersion: v1
- kind: Service
- metadata:
  name: myapp-internal-service
- spec:
  - selector:
    app: myapp
  - ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

      # no nodeport in internal service! starting from 3000 default type ClussterIP
